# freecad-surfacetools

./: CMakeLists.txt  README.md
SurfaceTools/: CMakeLists.txt  Init.py  InitGui.py  InitGui.py~  Makefile  Makefile.am  SurfaceTools.dox  cmake_install.cmake
SurfaceTools/App/: AppSurfaceTools.cpp  AppSurfaceTools.cpp~  AppSurfaceToolsPy.cpp  CMakeLists.txt  CMakeLists.txt~  FeatureBSplineSurf.cpp  FeatureBSplineSurf.h  FeatureBezSurf.cpp  FeatureBezSurf.h  FeatureConstrainedSurface.cpp~  FeatureConstrainedSurface.h~  FeatureCut.cpp  FeatureCut.h  FeatureFilling.cpp  FeatureFilling.cpp~  FeatureFilling.h  FeatureFilling.h~  FeatureSewing.cpp  FeatureSewing.h  Makefile  Makefile.am  PreCompiled.h  cmake_install.cmake
SurfaceTools/Gui/: AppSurfaceToolsGui.cpp  AppSurfaceToolsGuiPy.cpp  CMakeLists.txt  Command.cpp  Makefile  Makefile.am  PreCompiled.h  Workbench.cpp  Workbench.h  cmake_install.cmake  qrc_SurfaceTools.cxx
SurfaceTools/Gui/Resources/: SurfaceTools.qrc
